<resources>
    <string name="app_name">ChatAppFireBase</string>
    <string name="enter_your_phone_no">Enter Your Phone No.</string>
    <string name="phone_no">Phone No.</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_name">Your Name.</string>
    <string name="name_display_here">Name Display Here</string>
    <string name="status_displays_here">Status Displays here</string>
    <string name="chats">Chats</string>
    <string name="enterNumber">Enter Your Number Here</string>
    <string name="enterOtp">Enter The OTP Which You Recieved</string>
    <string name="enterOTP">Enter the OTP here....</string>
    <string name="changeNumber">Didn\'t Recieve ? Change Your Number</string>
    <string name="verifyOtpBtn">Verify OTP</string>
    <string name="save_your_profile">Save Your Profile</string>
    <string name="enterName">Enter Your Name Here</string>
    <string name="saveProfile">Save Profile</string>
    <string name="sender_message_display_here">Sender Message Display Here</string>
    <string name="_20_09">20:09</string>
    <string name="logout">logout</string>
    <string name="type_message">Type a message</string>
</resources>