<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/width_tall"
        android:layout_height="@dimen/width_tall"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/height_normal"
        android:src="@drawable/mychatapplogo"
        android:contentDescription="@string/app_name">
    </ImageView>
    <TextView
        android:id="@+id/textheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:padding="@dimen/spacing_large"
        android:text="@string/enterOtp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_large"
        android:textStyle="bold">
    </TextView>
    <EditText
        android:id="@+id/getotp"
        android:layout_width="@dimen/width_taller"
        android:layout_height="@dimen/width_normal"
        android:layout_below="@id/textheading"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/width_tall"
        android:layout_marginRight="@dimen/width_tall"
        android:hint="@string/enterOTP"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black">
    </EditText>
    <TextView
        android:id="@+id/changenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/getotp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/changeNumber"
        android:textColor="@color/black"
        android:textSize="@dimen/font_normal">
    </TextView>
    <android.widget.Button
        android:id="@+id/verifyotp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_normal"
        android:layout_below="@id/changenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/green"
        android:paddingLeft="@dimen/spacing_huge"
        android:paddingRight="@dimen/spacing_huge"
        android:text="@string/verifyOtpBtn"
        android:textColor="@color/white">
    </android.widget.Button>
    <ProgressBar
        android:id="@+id/progressbarofotpauth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifyotp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="invisible">
    </ProgressBar>
</RelativeLayout>